# django-kafka-event-log

./: .env.example  .gitignore  Makefile  README.md  README.rst  codecov.yml  docker-compose.yml  pyproject.toml  settings.py  setup.cfg  setup.py
.circleci/: config.yml  docker-compose.override.yml
.docker/: Dockerfile  entrypoint.sh  uwsgi.ini
.github/: auto_assign.yml  pull_request_template.md
events/: models.py  utils.py
events/common/: base_service_mixin.py
events/migrations/: 0001_initial.py
events/tests/: test_utils.py
events/tests/models/: sample.py
events/tests/serializers/: sample_serializer.py
root/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
