[tool.poetry]
name = "events"
version = "0.1.0"
description = ""
authors = ["nqtrg <zquangu112z@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "2.1.1"
django-environ = "^0.4.5"
uvicorn = "^0.13.4"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
django-filter = "^2.4.0"
celery = "^5.1.0"
django-cors-headers = "^3.5.0"
drf-yasg = "^1.20.0"
django-redis = "^4.12.1"
requests-oauthlib = "^1.3.0"
oauth2client = "^4.1.3"
responses = "^0.13.3"
eventsourcing = "^9.0.3"
confluent-kafka = "^1.7.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
