[flake8]
max-line-length = 120
exclude =
    __init__.py
    **/migrations/*.py
    .tf/**/*.py
[coverage:run]
branch = True
omit =
    manage.py
    root/settings.py
    **/migrations/*
[metadata]
name = django-kafka-event-log
version = 0.1
description = A Django app to store an event and publish the event to Kafka
long_description = file: README.rst
author = Diag
author_email = ngu.truong@diag.vn
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.4
